--- a/DreamTech/Principal/pom.xml
+++ b/DreamTech/Principal/pom.xml
@@ -5,7 +5,7 @@
   <groupId>DreamTech</groupId>
   <artifactId>Principal</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>Principal</name>
   <url>http://maven.apache.org</url>
