--- a/DreamTech/Principal/pom.xml
+++ b/DreamTech/Principal/pom.xml
@@ -22,4 +22,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+  	<module>Identificacion</module>
+  </modules>
 </project>
