Hecha las clases de PayPal.
Tienen errores porque realmente no vamos a tener que mostrar todas las
cuentas PayPal. Empezar a hacer LOGIN.

--- a/DreamTech/Principal/pom.xml
+++ b/DreamTech/Principal/pom.xml
@@ -26,5 +26,6 @@
   	<module>Identificacion</module>
     <module>Canciones</module>
     <module>Musica</module>
+    <module>Pagos</module>
   </modules>
 </project>
